--- a/index.html
+++ b/index.html
@@ -869,7 +869,7 @@
             en résinage, plomberie, chaudronnerie et plus encore...
           </p>
           <div class="hero-buttons">
-            <a href="./assets/docs/plaquette-commerciale-cogets.pdf" class="btn btn-outline" target="_blank" download>Nos Services</a>
+            <a href="./assets/docs/plaquette-commerciale-cogets.pdf" class="btn btn-outline" target="_blank" download>Accéder à notre plaquette</a>
             <a href="contact.html" class="btn">Demander un devis</a>
           </div>
         </div>
